replacing deprecated URL contructor and removing other warnings